# grafana-ai-agent

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/: copilot-instructions.md
demo/: DOCKER_SETUP.md  docker-compose.yml
demo/apps/: ARCHITECTURE.md  README.md  requirements.txt
demo/apps/backend/: Dockerfile  app.py
demo/apps/database/: Dockerfile  app.py
demo/apps/frontend/: Dockerfile  app.py
demo/scripts/: copy-provisioning.sh  generate_logs.py  generate_metrics.py  generate_traces.py
docker/: README.md
grafana_agent/: __init__.py  chat_interface.py  cli.py  dashboard_generator.py  grafana_client.py  llm_client.py
tests/: __init__.py  test_chat_interface.py  test_cli.py  test_dashboard_generator.py  test_grafana_client.py  test_llm_client.py
